--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "start": "gulp serve"
+    "start": "gulp serve",
+    "deploy": "gulp build"
   }
 }
