--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-postcss": "^6.1.0",
     "gulp-raster": "^0.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-stylus": "^2.3.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
