Update readme and web title

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "strvtemplate",
-  "description": "STRV template",
+  "name": "bizziapp",
+  "description": "Bizzi web",
   "version": "0.0.1",
   "repository": {
     "type": "git",
