--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "^0.1.2",
     "gulp-csso": "^1.0.1",
+    "gulp-data": "^1.2.1",
     "gulp-debug": "^2.1.2",
     "gulp-group-css-media-queries": "^1.1.0",
     "gulp-iconfont": "^1.0.0",
@@ -25,6 +26,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.1.0",
+    "gulp-pug": "^3.3.0",
     "gulp-raster": "^0.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.1",
@@ -40,7 +42,7 @@
     "pixrem": "^3.0.0",
     "postcss-url": "^5.1.1",
     "pretty-hrtime": "^1.0.1",
-    "pug": "^2.0.0-beta7",
+    "pug": "^2.0.0-rc.4",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5"
   },
